--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "gatsby-plugin-sitemap": "^2.0.3",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-source-graphql": "^2.1.21",
+    "gatsby-source-graphql": "^2.1.24",
     "gatsby-transformer-sharp": "2.2.14",
+    "graphql": "^14.5.8",
     "prop-types": "^15.6.2",
     "react": "^16.11.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -47,7 +48,7 @@
   "devDependencies": {
     "babel-eslint": "^10.0.1",
     "babel-plugin-styled-components": "^1.10.6",
-    "eslint": "^5.10.0",
+    "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-import": "^2.14.0",
