--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-graphql": "^2.1.29",
     "gatsby-transformer-sharp": "2.3.9",
     "graphql": "^14.5.8",
+    "node": "^13.5.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
